--- a/Client/index.html
+++ b/Client/index.html
@@ -19,11 +19,13 @@
     <label for = "kodeord">Kodeord:</label><br>
     <input id="kodeord" type="password"><br>
 
-    <button>Login</button>
+  </form>
+
+    <button onclick="login()">Login</button>
     <p>Har du ikke en bruger? <a href="registrer.html"> Så opret en her</a></p>
 
 
-  </form>
+
 
     <div id="bottomTextContainer">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -31,6 +33,7 @@
     </div>
 </div>
 
+<script src="indexScript.js"></script>
 
 </body>
 </html>
