working chat server

--- a/Client/beskeder.html
+++ b/Client/beskeder.html
@@ -12,8 +12,8 @@
         <button id="button1">Send</button>
     </form>
 
-<script src="/Server/node_modules/socket.io/client-dist/socket.io.js"></script>
-<script src="/Client/beskederScript.js"></script>
+<script src="https://tallboye.herokuapp.com/socket.io/socket.io.js"></script>
+<script src="beskederScript.js"></script>
 
 </body>
 </html>
