--- a/Client/registrer.html
+++ b/Client/registrer.html
@@ -13,7 +13,7 @@
 
     <h3>Indtast Oplysninger</h3>
 
-<form>
+<form method="POST" action="index.html">
 
     <label for = "Navn">Indtast Navn:</label><br>
     <input id="Navn" type="text"><br>
@@ -29,7 +29,7 @@
 
 </form>
 
-    <button onclick="postRequest()">Registrer</button>
+    <button id="register" onclick="postRequest()">Registrer</button>
 
 </div>
 
