--- a/Client/beskeder.html
+++ b/Client/beskeder.html
@@ -6,11 +6,14 @@
     <link href="beskederStyle.css" rel="stylesheet">
 </head>
 <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-        <input id="input" autocomplete="off" />
-        <button id="button1">Send</button>
-    </form>
+
+    <div>
+        <ul id="messages"></ul>
+        <form id="form" action="">
+            <input id="input" autocomplete="off" />
+            <button id="button1">Send</button>
+        </form>
+    </div>
 
 <script src="https://tallboye.herokuapp.com/socket.io/socket.io.js"></script>
 <script src="beskederScript.js"></script>
