--- a/Client/registrer.html
+++ b/Client/registrer.html
@@ -13,23 +13,19 @@
 
     <h3>Indtast Oplysninger</h3>
 
+    <b><p id="warning"></p></b>
+
 <form method="POST" action="index.html">
 
     <label for = "Navn">Indtast Navn:</label><br>
     <input id="Navn" type="text"><br>
-
-    <label for = "Email">Indtast Email:</label><br>
-    <input id="Email" type="email"><br>
-
-    <label for = "Foedselsdato">Indtast Fødselsdato:</label><br>
-    <input id="Foedselsdato" type="date"><br>
 
     <label for = "Kodeord">Indtast Kodeord:</label><br>
     <input id="Kodeord" type="password"><br>
 
 </form>
 
-    <button id="register" onclick="postRequest()">Registrer</button>
+    <button id="register" onclick="postRequest()">Register</button>
 
 </div>
 
