added check for existing username

--- a/Client/index.html
+++ b/Client/index.html
@@ -11,7 +11,7 @@
 <div id="formContainer">
 
   <h3>Login Oplysninger</h3>
-  <form action="/login">
+  <form>
 
     <label for = "brugerNavn">Brugernavn:</label><br>
     <input id="brugerNavn" type="text"><br>
