--- a/Client/beskeder.html
+++ b/Client/beskeder.html
@@ -15,7 +15,7 @@
         </form>
     </div>
 
-<script src="https://tallboye.herokuapp.com:3000/socket.io/socket.io.js"></script>
+<script src="https://tallboye.herokuapp.com/socket.io/socket.io.js"></script>
 <script src="beskederScript.js"></script>
 
 </body>
