--- a/Client/beskeder.html
+++ b/Client/beskeder.html
@@ -7,13 +7,21 @@
 </head>
 <body>
 
-    <div>
+<div id="pageContainer">
+
+    <div id="usersContainer">
+
+    </div>
+
+    <div id="messageContainer">
         <ul id="messages"></ul>
         <form id="form" action="">
             <input id="input" autocomplete="off" />
             <button id="button1">Send</button>
         </form>
     </div>
+
+</div>
 
 <script src="https://tallboye.herokuapp.com/socket.io/socket.io.js"></script>
 <script src="beskederScript.js"></script>
