--- a/Client/beskeder.html
+++ b/Client/beskeder.html
@@ -9,9 +9,7 @@
 
 <div id="pageContainer">
 
-    <div id="usersContainer">
-
-    </div>
+    <div id="usersContainer"></div>
 
     <div id="messageContainer">
         <ul id="messages"></ul>
