--- a/Client/beskeder.html
+++ b/Client/beskeder.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Beskeder</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link href="beskederStyle.css" rel="stylesheet">
 </head>
 <body>
 
 <div id="pageContainer">
 
-    <div id="usersContainer"></div>
+    <div id="topDisplay">
+        <div id="usersContainer"></div>
 
-    <div id="messageContainer">
-        <ul id="messages"></ul>
-        <form id="form" action="">
-            <input id="input" autocomplete="off" />
-            <button id="button1">Send</button>
-        </form>
+        <div id="chatContainer">
+            <ul id="messages"></ul>
+        </div>
+    </div>
+
+    <div id="inputArea">
+        <input id="input" onkeydown="search(this)" placeholder="Write text message here..." />
+        <button id="sendButton" onclick="sendMessage()">Send</button>
     </div>
 
 </div>
