--- a/Client/index.html
+++ b/Client/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="indexStyle.css">
+
 </head>
 <body>
 <h1>klima-slogan</h1>
