--- a/Client/registrer.html
+++ b/Client/registrer.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link href="registrerStyle.css" rel="stylesheet">
 </head>
 <body>
